Reviewed by Eric & Oliver.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=14198

Reeanble <foreignObject>. Explicitely disallow <use> on <foreignObject>
as it may lead to bad problems.

While I'm at it disallow <use> on any non-svg element.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@23618 268f45cc-cd09-0410-ab3c-d52691b4dbfc