WebCore/bindings/js/JSSVGElementWrapperFactory.cpp
@@ -230,6 +230,7 @@ typedef DOMNode* (*CreateSVGElementWrapperFunction)(ExecState*, PassRefPtr<SVGEl
     macro(defs, Defs) \
     macro(desc, Desc) \
     macro(ellipse, Ellipse) \
+    macro(foreignObject, ForeignObject) \
     macro(g, G) \
     macro(image, Image) \
     macro(linearGradient, LinearGradient) \
