WebCore/rendering/RenderForeignObject.cpp
@@ -22,8 +22,7 @@
 
 #include "config.h"
 
-#if ENABLE(SVG) && ENABLE(SVG_EXPERIMENTAL_FEATURES)
-
+#if ENABLE(SVG)
 #include "RenderForeignObject.h"
 
 #include "GraphicsContext.h"
